fixed handles and squashed unit conversion bug

--- a/default.css
+++ b/default.css
@@ -134,6 +134,7 @@ handle.dragging > .handleColor5 { border-color: #A300D9; color: #A300D9; }
 	padding: 5%;
 	background-color: #eee;
 	left: 500px;
+	margin-left: -2.55%;
 }
 .box3 {
 	top: 350px;
